use fixed position on navbar, and dynamic margin for main content, to prevent bug on dropdown menu visibility with chrome

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -27,7 +27,6 @@ canvas {
   background-image: url(../static/logo.png);
   background-repeat: no-repeat;
   border: 0;
-  position: static;
 }
 
 .navbar {
